--- a/aquarium-salinity.yaml
+++ b/aquarium-salinity.yaml
@@ -1,3 +1,43 @@
+esphome:
+  name: salinity
+  friendly_name: "Aquarium: Salinity"
+
+esp32:
+  board: esp32-s3-devkitc-1
+  framework:
+    type: esp-idf
+
+logger:
+
+api:
+  encryption:
+    key: !secret_api_key
+
+ota:
+  - platform: esphome
+    password: !secret_ota_password
+
+wifi:
+  ssid: !secret wifi_ssid_fish
+  password: !secret wifi_password_fish
+  domain: !secret_domain
+  fast_connect: true
+  manual_ip:
+    static_ip: 10.10.10.41
+    gateway: 10.10.10.1
+    subnet: 255.255.255.0
+  ap:
+    
+captive_portal:
+
+web_server:
+  port: 80
+  local: true
+  version: 3
+  auth:
+    username: !secret web_user
+    password: !secret web_pw
+
 time:
   - platform: homeassistant
     id: homeassistant_time
@@ -11,9 +51,8 @@ i2c:
 ads1115:
   - address: 0x48 
     id: ads1115_hub
-
-# Persistent storage for calibration parameters - MUST be defined before sensors
-number: 
+    
+number:         
   - platform: template
     name: "EC Calibration Slope"
     id: ec_slope
@@ -90,7 +129,7 @@ sensor:
     id: pt1000_voltage
     update_interval: 2s  
     accuracy_decimals: 4
-    internal: false
+    internal: true
     filters:
       - median:
           window_size: 3 
@@ -101,7 +140,7 @@ sensor:
     name: "Water Temperature"
     unit_of_measurement: "°C"
     accuracy_decimals: 2
-    update_interval: 2s
+    update_interval: 5s
     filters:
       - sliding_window_moving_average:
           window_size: 3 
@@ -125,18 +164,22 @@ sensor:
     update_interval: 2s
     unit_of_measurement: V
     accuracy_decimals: 4
-    internal: false
-    
+    internal: true
+    filters:
+    - median:
+        window_size: 3
+        send_every: 1
+
   - platform: template
     name: "EC Internal"
     id: ec_internal
     unit_of_measurement: "µS/cm"
     device_class: "conductivity"
     state_class: "measurement"
-    update_interval: 2s
+    update_interval: 5s
     filters:
-      - median:
-          window_size: 3
+      - sliding_window_moving_average:
+          window_size: 5
           send_every: 1
     lambda: |-
       float measured = id(ec_voltage).state;    // raw ADS voltage in volts
@@ -153,7 +196,7 @@ sensor:
     name: "Salinity"
     unit_of_measurement: "ppt"
     accuracy_decimals: 2
-    update_interval: 2s
+    update_interval: 10s
     lambda: |-
       float ec25 = id(ec_internal).state;
       if (isnan(ec25)) return {};
@@ -171,12 +214,10 @@ sensor:
     lambda: |-
       uint32_t last_cal_timestamp = (uint32_t)id(last_calibration_timestamp).state;
       
-      // If never calibrated, return a large number to indicate this
       if (last_cal_timestamp == 0) {
         return 999.9;  // Indicates "never calibrated"
       }
       
-      // Get current time from Home Assistant
       auto time = id(homeassistant_time).now();
       if (!time.is_valid()) {
         ESP_LOGW("calibration", "Time not available from Home Assistant");
@@ -184,13 +225,8 @@ sensor:
       }
       
       uint32_t current_timestamp = time.timestamp;
-      
-      // Calculate time difference in seconds
       uint32_t time_diff = current_timestamp - last_cal_timestamp;
-      
-      // Convert to days (86400 seconds per day)
       float days = time_diff / 86400.0;
-      
       return days;
 
 button:
@@ -200,9 +236,10 @@ button:
     entity_category: diagnostic
     on_press:
       - lambda: |-
-          float current_voltage = id(ec_voltage).state * 1000;
+          float measured = id(ec_voltage).state;            
+          float current_voltage = (measured / 0.6) * 1000.0;  // I'm using a voltage divider!
           float current_temp = id(ref_temp).state;
-          
+        
           if (isnan(current_temp)) {
             current_temp = 24.5;
           }
